renamed css style datapicker-align-fix to datepicker-content

--- a/src/app/modules/expenses/pages/expenses-page/expenses-page.component.scss
+++ b/src/app/modules/expenses/pages/expenses-page/expenses-page.component.scss
@@ -2,6 +2,6 @@
   width: 250px;
 }
 
-.datepicker-align-fix {
+.datepicker-content {
   height: 4px;
 }
